tests/compile-fail/integration__integration__ecl_features__eosd_exported_fn_const_fn_name_clash.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: redefinition of function 'name'
  ┌─ <input>:9:16
  │
8 │     void name() {}
  │          ---- originally defined here
9 │     const void name() {}
  │                ^^^^ redefinition of function


